fix: ltl-app layout issue

--- a/packages/lifetime-legal/src/styles/index.scss
+++ b/packages/lifetime-legal/src/styles/index.scss
@@ -25,6 +25,7 @@ body {
 }
 
 .navbar {
+  height: 100%;
   @media screen and (min-width: 768px) {
     position: fixed;
   }
